Adding catapult system

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             <div>
                 <section id="game-object-list" class="flex-item info-form-area">
                     <ul>
-                        <li><div id="box-1" class="box strong-box draggable" draggable="true"></div></li>
+                        <li><div id="box-1" class="box strong-box" draggable="true"></div></li>
+                        <li><div id="catapult" class="box catapult" draggable="true"></div></li>
+
                     </ul>
                 </section>
                 <section id = "object-editor" class = "columns">
