--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <ul>
                         <li><div id="box-1" class="box strong-box" draggable="true"></div></li>
                         <li><div id="catapult" class="box catapult" draggable="true"></div></li>
-
+                        <li><div id="blu" class="box blu" draggable="true"></div></li>
                     </ul>
                 </section>
                 <section id = "object-editor" class = "columns">
