--- a/index.html
+++ b/index.html
@@ -62,12 +62,38 @@
                     <ul>
                         <li><div id="box-1" class="box strong-box" draggable="true"></div></li>
                         <li><div id="catapult" class="box catapult" draggable="true"></div></li>
-                        <li><div id="blu" class="box blu" draggable="true"></div></li>
+                        <li><div id="bird" class="box bird" draggable="true"></div></li>
                     </ul>
                 </section>
                 <section id = "object-editor" class = "columns">
                     Object Editor:
+                    <form id = "level-info-area" class = "submission-form" accept-charset = "utf-8">
+                        Name: <br>
+                        <select id="optionsObjects" ></select> <button id="load-btn-objects">Load Data </button><br>
 
+                        Value:<br>
+                        <input type = "text" name = "obj-value" value = "0" placeholder = "0"/><br />
+                        Height: <br>
+                        <input type="text" name="obj-height" value="1" /><br />
+                        Width:<br>
+                        <input type="text" name="obj-width" value="15" /><br />
+                        Texture:<br>
+                        <input type="text" name="obj-texture" value="my-background" /><br />
+                        Mass:<br>
+                        <input type="text" name="obj-mass" value="1000" /><br />
+                        Restitution:<br>
+                        <input type="text" name="obj-rest" value="10000" /><br />
+                        Friction:<br>
+                        <input type="text" name="obj-friction" value="50000" />
+                        Shape:<br>
+                        <input type="text" name="obj-shape" value="50000" />
+                        <br>
+
+                        <input type="submit" name="action" value="Submit" />
+                        <div id="save-level">
+                            <button class="button-flat" id = "save-btn">Save Level</div>
+                        </div>
+                    </form>
                 </section>
 
             </div>
