Saving Editor Objects

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div>
                 <section id = "editor-form-section" class = "columns">
                     <form id = "level-info-area" class = "submission-form" accept-charset = "utf-8">
+                        <select id="user-options"></select><br/>
                         Name: <br>
                         <input type = "text" name = "name" value = "nav"><br>
                         <select id="options" ></select> <button id="load-btn">Load Data </button><br>
@@ -50,7 +51,9 @@
                     <div id = "edit-window" class = "editor" >
                         <!-- This area is generated programatically -->
                     </div>
-                
+                    <div id = "del-window" class = "delete">
+                        
+                    </div>
 
 
 
