--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <!-- This area is generated programatically -->
                     </div>
                     <div id = "del-window" class = "delete">
-                        
+                        To delete any object, drag and drop here :)
                     </div>
 
 
