--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" type="text/css" href="css/editor.css">
 
         <!-- Scripts here are external libs -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>    </head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>    
+        <script src ="https://unpkg.com/browse/matter-js@0.14.2/build/matter.min.js"></script>
+    </head>
+
     <body>
         <main id = "editor-area" class = "flex-container">
             <div>
